src/objects/PhoneNumber__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PhoneNumberTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC_Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DNC Authority</label>
        <referenceTo>DNC_Authority__c</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNC_Exemption_Create_Date__c</fullName>
        <label>DNC Exemption Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNC_Exemption_Days__c</fullName>
        <label>DNC Exemption Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC_Exemption_Expiration_Date__c</fullName>
        <label>DNC Exemption Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNC_Exemption_Type__c</fullName>
        <label>DNC Exemption Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>WAC</fullName>
                </value>
                <value>
                    <fullName>Inbound Activity</fullName>
                </value>
                <value>
                    <fullName>Holdings</fullName>
                </value>
                <value>
                    <fullName>Order History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNC_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNC_Modified_On__c</fullName>
        <label>DNC Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_On__c</fullName>
        <label>Last Call On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_On__c</fullName>
        <label>Last Inbound On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Outbound_On__c</fullName>
        <label>Last Outbound On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_Type__c</fullName>
        <label>Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Calls__c</fullName>
        <label>Number of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inbound_Calls__c</fullName>
        <label>Number of Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Long_Calls__c</fullName>
        <label>Number of Long Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Calls__c</fullName>
        <label>Number of Outbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_7__c</fullName>
        <description>Phone number without area code</description>
        <label>Phone 7</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number_10_Numbers__c</fullName>
        <description>Not-easily-human-readable version of the pretty-formatted phone number stored in PhoneNumber__c.Name. The first 10 numeric characters after any leading ones or zeroes in PhoneNumber__c.Name are automatically stored here, without spaces or punctuation, whenever they change.</description>
        <inlineHelpText>Not-easily-human-readable version of the pretty-formatted phone number stored in PhoneNumber__c.Name. The first 10 numeric characters after any leading ones or zeroes in PhoneNumber__c.Name are automatically stored here, without spaces or punctuation, whe</inlineHelpText>
        <label>Phone Number 10 Numbers</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pop_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pop AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pop_Account__c</fullName>
        <label>Pop Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Invalid Number</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Trojan Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Connected_Seconds__c</fullName>
        <label>Time Connected (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Phone Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone_Number_10_Numbers__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phone Number Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>